# thesis

./: .gitignore  build.py  builder.py  builder2.py  cleaned-errorlog.txt  codegen.py  data_parser.py  errorlog.txt  example.py  generate_seq.py  json_ in_py2cfg.py  json_converter.py  mod.py  model.py  model2.py  my_model.py  parse2.py  parsePY2.py  parse_cfg.py  parse_cfg_test.py  parsetest.py  remove-errors.py  remove_comments.py  test_ast.py  test_docstrings.py  test_file.py  traverse.py  unparsing.py
Test/: build.py  (+5 more)
py2cfg/: .gitignore  .gitlab-ci.yml  .readthedocs.yml  README.md  exampleCFG  generate_examples.sh  host_html_docs.sh  json_converter.py  logviewer.py  makefile  monkey_gen.sh  ninatest.json  pyproject.toml  requirements.txt  service-manifest.json  setup.py
py2cfg/examples/: branching-caesar-01.py  branching-caesar-02.py  branching-caesar-03.py  branching00.py  branching01.py  branching02.py  branching03.py  branching04.py  caesarHacker.py  classy.py  containers-00-search.py  containers-01-range.py  containers-02-off.py  containers-03-primes.py  containers-04-average.py  containers-05-exp.py  containers-06-trialdiv.py  containers-07-outofrange.py  containers-09-caesar-for.py  else_01.py  else_02.py  else_03.py  else_04.py  else_05.py  else_06.py  fib.py  functions-15-sqrt.py  functions-16-caesar.py  havacookie.py  inline-func-calls-01.py  inline-func-calls-02.py  inline-func-calls-03.py  inline-lambda-01.py  inline-ternary-01.py  lambda.py  loops-00-while_pos.py  loops-01-squared.py  loops-02-for-each.py  loops-03-range.py  loops-04-exponents.py  (+7 more)
(+119 files in other folders)
