[tool.poetry]
name = "py2cfg"
version = "0.7.1"
description = "Converts python source code to colorful Control Flow Graphs (CFGs)."
authors = ["Joe Studer <jmsxw4@mst.edu>", "Kevin Lai <zlnh4@mst.edu>", "Taylor <taylor@cnsr.dev>"]
readme = 'README.md'

packages = [
  { include = "py2cfg/*" },
  { include = "py2cfg/_proto_/*" },
  { include = "py2cfg/_proto_/src/*" },
  { include = "py2cfg/server/*" },
]

repository = "https://gitlab.com/classroomcode/py2cfg"

[tool.poetry.dependencies]
python = "^3.7"
astor = "^0.8.1"
pudb = "^2020.1"
websocket-server = "^0.4"
graphviz = "^0.16"
flask = "^1.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
py2cfg = 'py2cfg._runner:main'

[tool.black]
line-length = 80
[build-system]
requires = ["poetry>=0.12.3"]
build-backend = "poetry.masonry.api"
